--- a/Flask Mail/template/message.html
+++ b/Flask Mail/template/message.html
@@ -1,8 +1,4 @@
 <main>
-    <h1>Bem vindo!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis minima iusto molestias debitis, quo quos nihil, deserunt amet beatae laborum voluptates tempora ipsum suscipit, itaque non nam eveniet fugit voluptatum.</p>
-    <img src="https://www.minhaseriefavorita.com/wp-content/uploads/2018/09/curiosidades-o-incrivel-mundo-de-gumball-5.jpg" alt="gumball" width="400px" height="200px">
-    <h4>Meu desenho!!!!!</h4>
-
-    {{ msg }}
+    <h2>Bem-Vindo</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam, consectetur. Obcaecati vitae ex sit laborum nobis distinctio asperiores sed praesentium incidunt, repellendus possimus sint eligendi eum? Deserunt ducimus odio dignissimos.</p>
 </main>
