--- a/Ideia/template/list.html
+++ b/Ideia/template/list.html
@@ -13,18 +13,10 @@
                 <td>{{ ideia._cod }}</td>
                 <td>{{ ideia._titulo }}</td>
                 <td>{{ ideia._descricao }}</td>
-                <td><a href="/about/" id="about" value={{ideia._cod}}>Detalhes</a></td>
+                <td><a href="/{{ ideia._cod }}" id="about">Detalhes</a></td>
             </tr>
         {% endfor %}
     </table>
     <br><br>
     <a href="/insert">Adicionar</a>
-    <script>
-        const search = document.querySelectorAll('#about');
-        for (let i = 0; i < search.length; i++) {
-            search[i].addEventListener('click', () => {
-                search[i].href = '/about/' + search[i].value;
-            });
-        }
-    </script>
 {% endblock %}
