--- a/SQLAlchemy/app/templates/usuario/form.html
+++ b/SQLAlchemy/app/templates/usuario/form.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Page</title>
-</head>
-<body>
+{% extends './base.html' %}
+{% block content %}
     <form action="/usuario/cadastrar" method="post">
         <input type="text" name="nome" placeholder="Digite seu nome" required>
         <input type="email" name="email" placeholder="Digite seu email" required>
         <input type="password" name="senha" placeholder="Digite sua senha" required>
+        <select name="opt">
+            <option value="">Nenhum</option>
+            {% for item in lista %}
+                <option value="{{ item.id }}">{{ item.nome }}</option>
+            {% endfor %}
+        </select>
         <input type="submit" value="Enviar">
     </form>
-</body>
-</html>
+{% endblock %}
